[gd_scene load_steps=3 format=3 uid="uid://lwiid1iyxnee"]

[ext_resource type="Script" path="res://Script/FinishedPanel.gd" id="1_xkojb"]
[ext_resource type="FontFile" uid="uid://du5po75t5by2" path="res://Resource/Font/汉仪洛天依体简.ttf" id="2_jllik"]

[node name="FinishedPanel" type="Panel"]
self_modulate = Color(0, 0, 0, 0.764706)
top_level = true
offset_left = -579.0
offset_top = -328.0
offset_right = 578.0
offset_bottom = 329.0
script = ExtResource("1_xkojb")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 194.0
offset_top = 52.0
offset_right = 967.0
offset_bottom = 134.0
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_jllik")
theme_override_font_sizes/font_size = 60
text = "TITLE"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="InfoVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 334.0
offset_top = 154.0
offset_right = 830.0
offset_bottom = 402.0

[node name="SPEEDHBoxContainer" type="HBoxContainer" parent="InfoVBoxContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="InfoVBoxContainer/SPEEDHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("2_jllik")
theme_override_font_sizes/font_size = 40
text = "SPEED
"

[node name="SpeedLineEdit" type="LineEdit" parent="InfoVBoxContainer/SPEEDHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_jllik")
theme_override_font_sizes/font_size = 38
editable = false

[node name="PERFECTHBoxContainer" type="HBoxContainer" parent="InfoVBoxContainer"]
layout_mode = 2

[node name="PerfectLabel" type="Label" parent="InfoVBoxContainer/PERFECTHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("2_jllik")
theme_override_font_sizes/font_size = 40
text = "PERFECT"

[node name="PerfectLineEdit" type="LineEdit" parent="InfoVBoxContainer/PERFECTHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_jllik")
theme_override_font_sizes/font_size = 38
editable = false

[node name="GOODHBoxContainer" type="HBoxContainer" parent="InfoVBoxContainer"]
layout_mode = 2

[node name="GoodLabel" type="Label" parent="InfoVBoxContainer/GOODHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("2_jllik")
theme_override_font_sizes/font_size = 40
text = "GOOD"

[node name="GoodLineEdit" type="LineEdit" parent="InfoVBoxContainer/GOODHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_jllik")
theme_override_font_sizes/font_size = 38
editable = false

[node name="MISSINGHBoxContainer" type="HBoxContainer" parent="InfoVBoxContainer"]
layout_mode = 2

[node name="MissingLabel" type="Label" parent="InfoVBoxContainer/MISSINGHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("2_jllik")
theme_override_font_sizes/font_size = 40
text = "MISSING"

[node name="MissingLineEdit" type="LineEdit" parent="InfoVBoxContainer/MISSINGHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_jllik")
theme_override_font_sizes/font_size = 38
editable = false

[node name="ScoreHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 214.0
offset_top = 414.0
offset_right = 936.0
offset_bottom = 486.0

[node name="ScoreLabel" type="Label" parent="ScoreHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_jllik")
theme_override_font_sizes/font_size = 50
text = "分数 SCORE"

[node name="ScoreLineEdit" type="LineEdit" parent="ScoreHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_jllik")
theme_override_font_sizes/font_size = 48
editable = false

[node name="NextButton" type="Button" parent="."]
layout_mode = 0
offset_left = 831.0
offset_top = 542.0
offset_right = 1061.0
offset_bottom = 590.0
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_jllik")
theme_override_font_sizes/font_size = 30
text = "  继续 NEXT  "

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 536.0
offset_top = 542.0
offset_right = 766.0
offset_bottom = 590.0
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_jllik")
theme_override_font_sizes/font_size = 30
text = "  返回 BACK  "

[connection signal="button_down" from="NextButton" to="." method="_on_next_button_button_down"]
[connection signal="button_down" from="BackButton" to="." method="_on_back_button_button_down"]
